Adicionei parâmetro 'options' para funcionalidade de requisição de API localhost.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "appdeteste",
   "version": "0.1.0",
   "private": true,
+  "options": {
+    "allowedHosts": ["localhost", ".localhost"],
+    "proxy": "https://localhost:5000/"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
